--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Project</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
     <!-- left section -->
     <div class="leftSection">
-
+        <div>hi</div>
     </div>
     <!-- right section -->
     <div class="rightSection">
