--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Project</title>
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- left section -->
     <div class="leftSection">
-        <div>hi</div>
+      <div>To be a great developer, you need more than talent alone.You need a bit more.</div>
+      <div class="author"><span>Yours truly</span> -</div>
     </div>
     <!-- right section -->
     <div class="rightSection">
-
+      <div>
+        <button>Discover what's extra.</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
