--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
       <div class="author"><span>Yours truly</span> -</div>
     </div>
     <!-- right section -->
-    <div class="rightSection">
-      <div>
-        <button>Discover what's extra.</button>
+    <div class="rightSection" style="align-items: start; margin-left: 5%">
+      <!-- <div class="mask" style="border: 1px solid red; width: 50%;"> -->
+      <div class="mask">
+        <div>
+          <button id="discoverBtn">Discover what's extra<img src="play-button.svg" width="32" alt="play" /></button>
+        </div>
+        <div id="list">
+          <div>Dedication</div>
+          <div>Consistency</div>
+          <div>Perseverance</div>
+          <div>Grit</div>
+          <button id="insanityBtn" class="insanityBtn">+ a lit of bit of insanity</button>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
