mask ui animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="rightSection" style="align-items: start; margin-left: 5%">
       <!-- <div class="mask" style="border: 1px solid red; width: 50%;"> -->
       <div class="mask">
-        <div>
+        <div class="centered-wrapper">
           <button id="discoverBtn">Discover what's extra<img src="play-button.svg" width="32" alt="play" /></button>
         </div>
         <div id="list">
